# iphone-manager

./: .gitignore  README.md  app.py  electron-builder.yml  main.py  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  requirements-deploy.txt  requirements.txt  setup.bat  setup.sh  storage.py
.github/workflows/: build.yml
docs/: index.html
electron/: error.html  loading.html  main.js  preload.js
iphone_manager/: __init__.py  android_device.py  app.py  database.py  device.py  storage.py  transfer.py
iphone_manager/static/: style.css
iphone_manager/templates/: index.html
templates/: index.html
