[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iphone-manager"
version = "0.1.0"
description = "iPhone photo/video transfer tool — local web UI, no iTunes needed"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "pymobiledevice3>=4.0.0",
]

[project.scripts]
iphone-manager = "iphone_manager.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["iphone_manager*"]

[tool.setuptools.package-data]
iphone_manager = ["templates/*", "static/*"]
